# wirdigen

./: .gitignore  Cargo.toml  LICENSE  README.adoc  README.md
.github/workflows/: build.yaml  rust-audit.yml  rust-build.yml  rust-ci.yml  rust-clippy.yml  rust-coverage.yml  rust-test.yml
app/: Cargo.toml
app/src/: cli_parser.rs  error.rs  file_format.rs  main.rs  runtime.rs
data/: dissector_customProtocol.lua  example_dissector.json
example/: example_dissector.json  example_dissector_backup.json
lib/dissector_configuration/: Cargo.toml
lib/dissector_configuration/src/: base.rs  dissector_configuration.rs  dissector_data.rs  endianness.rs  format.rs  lib.rs  network_information.rs  protocol.rs
lib/dissector_generator/: Cargo.toml
lib/dissector_generator/res/: template.lua
lib/dissector_generator/src/: error.rs  generator.rs  lib.rs
lib/dissector_parser/: Cargo.toml
lib/dissector_parser/res/: schema.json
lib/dissector_parser/src/: error.rs  lib.rs  traits.rs
lib/dissector_parser/src/parsers/: mod.rs
lib/dissector_parser/src/parsers/json/: description.rs  mod.rs
res/: schema.json  template.lua
src/: data_size.rs  dissector.rs  error.rs  generator.rs  keyword.rs  lib.rs  schema.rs  template.rs  utils.rs  validator.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: dissector_configuration.rs  dissector_parser_json.rs  lib.rs
