[package]
name = "wirdigen"
version = "0.4.0"
authors = ["Aurélien VERNIZEAU <aurelien.vernizeau@gmail.com>"]
edition = "2021"
description = "LUA Wireshark Dissector Generator from JSON"
readme = "README.md"
homepage = "https://github.com/Cerclique/wirdigen/"
repository = "https://github.com/Cerclique/wirdigen/"
license-file = "LICENSE"
keywords = ["wireshark", "dissector", "lua"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
jsonschema = "0.15.1"
chrono = "0.4.19"
regex = "1.5.5"
