[workspace]
members = [
    "app",
    "lib/dissector_configuration",
    "lib/dissector_generator",
    "lib/dissector_parser",
]
exclude = ["wasm"]
resolver = "2"

[workspace.package]
authors = ["Aurélien VERNIZEAU <aurelien.vernizeau@gmail.com>"]
edition = "2021"
repository = "https://github.com/cerclique/widigen"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0.61"

dissector_configuration = { path = "lib/dissector_configuration" }
dissector_parser = { path = "lib/dissector_parser" }
dissector_generator = { path = "lib/dissector_generator" }
