[package]
name = "dissector_parser"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dissector_configuration.workspace = true
jsonschema = { version = "0.18.0", default-features = false }
serde_json = "1.0.120"
thiserror.workspace = true
serde = "1.0.203"
